clusters/cl01tl/manifests/bentopdf/Service-bentopdf.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  labels:
    app.kubernetes.io/instance: bentopdf
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bentopdf
    app.kubernetes.io/service: bentopdf
    helm.sh/chart: bentopdf-5.2.1
  namespace: bentopdf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: bentopdf
    app.kubernetes.io/name: bentopdf
