clusters/cl01tl/manifests/bentopdf/HTTPRoute-bentopdf.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf
  labels:
    app.kubernetes.io/instance: bentopdf
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bentopdf
    helm.sh/chart: bentopdf-5.2.1
  annotations:
    gethomepage.dev/description: BentoPDF
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/href: https://bentopdf.alexlebens.dev/#tools-header
    gethomepage.dev/icon: sh-bentopdf.webp
    gethomepage.dev/name: PDF Tools
    gethomepage.dev/siteMonitor: http://bentopdf.bentopdf:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "200"
  namespace: bentopdf
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "bentopdf.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bentopdf
          namespace: bentopdf
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
